--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
-language: objective-c
+osx_image: xcode9.1
+language: swift
 # cache: cocoapods
 # podfile: Example/Podfile
 # before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SKSpriteButton.xcworkspace -scheme SKSpriteButton-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SKSpriteButton.xcworkspace -scheme SKSpriteButton-Example -sdk iphonesimulator11.1 ONLY_ACTIVE_ARCH=NO -destination "OS=11.1,name=iPhone 7 Plus" | xcpretty
 - pod lib lint
